bump felix.gogo.shell version